# ocaml-fact-

./: .gitattributes  .gitmodules  dune-project  fact++.opam
.github/workflows/: build.yml
config/: discover.ml  dune
ffi/bindings/: dune  fact_bindings.ml
ffi/lib/: dune  m.ml
ffi/stubgen/: dune  ffi_stubgen.ml
lib/: dune  fact.ml  fact.mli
test/: dune  test.ml
