(library
 (name fact_ffi)
 (public_name fact++.ffi)
 (modules g m)
 (libraries fact++.bindings ctypes.stubs ctypes fact++.c)
 (library_flags (:include ../../config/library_flags.sexp))
 (foreign_stubs
  (language c)
  (flags (-I../../vendor/fact/FaCT++.C))))

(rule
 (targets g.ml)
 (deps ../stubgen/ffi_stubgen.exe)
 (action (with-stdout-to %{targets} (run %{deps} -ml))))

(rule
 (targets fact_stubs.c)
 (deps ../stubgen/ffi_stubgen.exe)
 (action (with-stdout-to %{targets} (run %{deps} -c))))
